# linrad

./: CMakeLists-vs2013.txt  CMakeLists.txt  LICENSE  Makefile.MinGW  Makefile.in  Makefile.linux  Makefile.msys2.debug  Makefile.msys2.nodebug  README.md  adtest.c  afc_graph.c  afcsub.c  afedri.c  affinity.c  airspy.c  airspyhf.c  allan_graph.c  anan.c  baseb_graph.c  bladerf.c  blank1.c  blnkdef.h  blnkvar.c  buf.c  bufbars.h  caldef.h  calibrate.c  caliq.c  calsub.c  calsub2.c  calvar.c  clean  cloudiq.c  coh_osc.c  coherent.c  cohsub.c  configure  configure.ac  configure.c  configure.in  (+224 more)
.github/workflows/: ci.yml
cmake/: README.txt  Toolchain_mingw32.cmake  Toolchain_mingw64.cmake
extlibs/: CMakeLists.txt  README
